--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-result: 99% (1st)
+**Security Enginering CW - 2022**
+*result*: 99%
+*tasks*:
+- to impliment an ARP spoofing MITM attack
+- Reserch a theoretical defence to a proposed Cloud based file storage system
